--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -2,14 +2,56 @@
     background: url('../img/bg.png') center center/cover no-repeat;
     min-height: 650px;
     padding: 21px 0 93px 0;
+    &__header {
+        font-weight: 700;
+        font-size: 42px;
+        text-align: right;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        margin-top: 91px;
+    }
+    &__subheader {
+        font-weight: 500;
+        font-size: 24px;
+        text-align: right;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        margin-top: 17px;
+    }
     &__wrapper {
         display: flex;
         flex-direction: column;
         align-items: flex-end;
     }
+    &__link {
+        margin-top: 8px;
+        font-weight: 500;
+        font-size: 16px;
+        text-align: right;
+        color: #FFFFFF;
+        span {
+            text-decoration-line: underline;
+        }
+    }
     &__icons {
+        margin-top: 60px;
         display: flex;
         justify-content: end;
         align-items:center
+    }
+    &__icon{
+        width: 130px;
+        margin-left: 39px;
+        img {
+            display: block;
+            margin:0 auto;
+        }
+        .promo__text {
+            margin-top: 20px;
+            font-weight: 500;
+            font-size: 14px;
+            text-align: center;
+            color: #FFFFFF;
+        }
     }
 }
