--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,7 +1,9 @@
 @import 'base/variables';
 @import 'base/mixins';
+@import 'base/media';
+
 * {
-    font-family: 'Museo Sans Cyrl 500', sans-serif;
+    font-family: 'Museo Sans Cyrl 300', sans-serif;
 }
 .container {
     max-width: 950px;
@@ -10,3 +12,6 @@
 @import 'blocks/promo';
 @import 'blocks/header';
 @import 'blocks/buttons';
+@import 'blocks/advantages';
+@import 'blocks/consultation';
+
