--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -16,4 +16,9 @@
         margin-top: 67px;
         font-size: 16px;
     }
+    &__submit {
+        width: 100%;
+        height: 58px;
+        font-size: 16px;
+    }
 }
