--- a/src/sass/blocks/_forms.scss
+++ b/src/sass/blocks/_forms.scss
@@ -11,5 +11,9 @@
         &:nth-child(3) {
             margin-bottom: 17px;
         }
+        &:focus {
+            background-color: $main-color;
+            color: white;
+        }
     }
 }
