--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,5 +14,6 @@
 @import 'blocks/buttons';
 @import 'blocks/advantages';
 @import 'blocks/consultation';
-@import 'blocks/forms'
+@import 'blocks/forms';
+@import 'blocks/carousel';
 
