--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -1,22 +1,31 @@
 .carousel {
     padding: 81px 0;
     &__inner {
-        width: 850px;
+        width: 950px;
         margin: 0 auto;
         display: flex;
         justify-content: space-between;
         align-items: center;
+        img {
+            margin: 0 auto;
+        }
     }
     .slick-prev {
-        width: 35px;
-        height: 50px;
         border: none;
         background-color: white;
+        margin-right: 66px;
+        img {
+            width: 31px;
+            height: 50px;
+        }
     }
     .slick-next {
-        width: 35px;
-        height: 50px;
         border: none;
         background-color: white;
+        margin-left: 66px;
+        img {
+            width: 31px;
+            height: 50px;
+        }
     }
 }
