--- a/src/sass/blocks/_forms.scss
+++ b/src/sass/blocks/_forms.scss
@@ -12,7 +12,7 @@
             margin-bottom: 17px;
         }
         &:focus {
-            background-color: $main-color;
+            background-color: rgb(253, 191, 191);
             color: white;
         }
     }
