--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -9,6 +9,10 @@
     color: #FFFFFF;
     border-radius: 5px;
     border: none;
+    transition: 0.3s all;
+    &:hover {
+        background: black;
+    }
     &__main {
         // padding: 11px 41px;
         width: 300px;
@@ -20,5 +24,10 @@
         width: 100%;
         height: 58px;
         font-size: 16px;
+    }
+    &__catalog {
+        width: 135px;
+        height: 44px;
+        font-size: 14px;
     }
 }
