--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -1,7 +1,7 @@
 .catalog {
     padding: 0 0 80px 0;
     .title {
-        font-weight: 900;
+        font-weight: 800;
         font-size: 30px;
         text-align: center;
         text-transform: uppercase;
@@ -10,7 +10,6 @@
     &__tabs {
         margin-top: 46px;
         list-style-type: none;
-        
         display: flex;
         justify-content: center;
         align-items: center;
@@ -26,14 +25,153 @@
         line-height: 50px;
         cursor: pointer;
         transform: skewX(-23deg);
-        div {
-            transform: skewX(23deg);
-        }
-        &:hover {
+        transition: 0.3s all;
+        &_active {
             border: none;
             background: $main-color;
             color: white;
         }
+        div {
+            transform: skewX(23deg);
+        }
+        &:hover {
+            transition: 0.3s all;
+            box-shadow: 0px 0px 33px $main-color;
+        }
         
+    }
+    &__content {
+        margin-top: 57px;
+        display: none;
+        flex-wrap: wrap;
+        &_active {
+            display: flex;
+        }
+    }
+    &-item {
+        max-width: 300px;
+        min-height: 440px;
+        border: 2px solid #E8E8E8;
+        padding: 20px;
+        margin: 0 16px 16px 0;
+        overflow: hidden;
+        &__img {
+            display: block;
+            margin: 0 auto;
+            max-width: 100%;
+            max-height: 200px;
+        }
+        &__subheader {
+            font-weight: 700;
+            font-size: 16px;
+            text-align: center;
+            color: #0D0D0D;
+            margin: 15px 0;
+        }
+        &__descr {
+            font-weight: 300;
+            font-size: 14px;
+            line-height: 22px;
+            text-align: center;
+            color: #0D0D0D;
+        }
+        &__link {
+            display: block;
+            text-align: center;
+            margin-top: 10px;
+            font-weight: 500;
+            font-size: 14px;
+            color: $main-color;
+            text-transform: uppercase;
+            &:hover {
+                color: $main-color;
+            }
+        }
+        &__back {
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(calc(-50% - 10px));
+            display: block;
+            text-align: center;
+            margin-top: 10px;
+            font-weight: 500;
+            font-size: 14px;
+            color: $main-color;
+            text-transform: uppercase;
+            &:hover {
+                color: $main-color;
+            }
+        }
+        &__wrapper {
+            display: flex;
+            width: calc(200% + 40px);
+        }
+        &__content {
+            width: 50%;
+            display: block;
+            margin-right: 0px;
+            transform: translateX(-100%);
+            transition: 0.3s all;
+            &_active {
+                margin-right: 20px;
+                transform: translateX(0%);
+            }
+        }
+        // hidden content 
+        &__list {
+            position: relative;
+            width: 50%;
+            display: block;
+            margin-left: 20px;
+            transform: translateX(0%);
+            transition: 0.3s all;
+            padding-left: 19px;
+            margin-bottom: 0;
+            list-style-type: none;
+            &_active {
+                margin-left: 0px;
+                transform: translateX(-100%);
+                padding-right: 20px;
+            }
+            li {
+                position: relative;
+                font-weight: 300;
+                font-size: 14px;
+                line-height: 21px;
+                color: #555555;
+                margin-bottom: 20px;
+                &::before {
+                    content: '';
+                    position: absolute;
+                    width: 5px;
+                    height: 5px;
+                    background-color: $main-color;
+                    left: -14px;
+                    top: 8px;
+                }
+            }
+        }
+        hr {
+            margin: 17px 0;
+            height: 1px;
+            background: #E8E8E8;
+        }
+        &__footer {
+            display: flex;
+            justify-content: space-between;
+            align-items:center
+        }
+        &__old-price {
+            font-weight: 300;
+            font-size: 14px;
+            text-decoration-line: line-through;
+            color: #555555;
+        }
+        &__current-price {
+            font-weight: 700;
+            font-size: 20px;
+            color: #050505;
+        }
     }
 }
