--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,7 +3,7 @@
 @import 'base/media';
 
 * {
-    font-family: 'Museo Sans Cyrl 300', sans-serif;
+    font-family: 'Museo Sans Cyrl 500', sans-serif;
 }
 .container {
     max-width: 950px;
@@ -16,5 +16,5 @@
 @import 'blocks/consultation';
 @import 'blocks/forms';
 @import 'blocks/carousel';
-
 @import 'blocks/catalog';
+@import 'blocks/feedback';
