--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,6 +5,7 @@
 * {
     font-family: 'Museo Sans Cyrl 500', sans-serif;
 }
+
 .container {
     max-width: 950px;
     margin: 0 auto;
@@ -19,3 +20,4 @@
 @import 'blocks/catalog';
 @import 'blocks/feedback';
 @import 'blocks/footer';
+@import 'blocks/modal';
