forms validation added

--- a/src/sass/blocks/_forms.scss
+++ b/src/sass/blocks/_forms.scss
@@ -12,8 +12,8 @@
             margin-bottom: 17px;
         }
         &:focus {
-            background-color: rgb(253, 191, 191);
-            color: white;
+            // background-color: rgb(252, 253, 191);
+            color: black;
         }
     }
     &_mt25 {
