--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -23,4 +23,16 @@
             font-weight: 700;
         }
     }
+    .error {
+		border: 3px solid $main-color;
+	}
+	label.error {
+        display: block;
+		border: none;
+		text-align: center;
+		margin-bottom: 15px;
+		padding: 5px 10px;
+		background-color: pink;
+		border-radius: 5px;
+	}
 }
