--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,10 @@
+@import 'libs/bootstrap-reboot.min';
+// @import 'libs/bootstrap-grid.min';
+@import 'libs/animate.min';
+@import 'libs/font';
+@import 'libs/slick';
+
+
 @import 'base/variables';
 @import 'base/mixins';
 @import 'base/media';
