last changes for today, i want to sleeeeeeep...

--- a/src/sass/libs/_font.scss
+++ b/src/sass/libs/_font.scss
@@ -1,5 +1,6 @@
 
 @font-face {
+	font-display: swap;
 	font-family: 'Museo Sans Cyrl 500';
 	src: url('../fonts/MuseoSansCyrl-500.eot');
 	src: local('../fonts/MuseoSansCyrl-500'),
@@ -11,6 +12,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'Museo Sans Cyrl 300';
 	src: url('../fonts/MuseoSansCyrl-300Italic.eot');
 	src: local('../fonts/MuseoSansCyrl-300Italic'),
@@ -22,6 +24,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'Museo Sans Cyrl 500';
 	src: url('../fonts/MuseoSansCyrl-500Italic.eot');
 	src: local('../fonts/MuseoSansCyrl-500Italic'),
@@ -33,6 +36,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'Museo Sans Cyrl 900';
 	src: url('../fonts/MuseoSansCyrl-900.eot');
 	src: local('MuseoSansCyrl-900'),
@@ -44,6 +48,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'Museo Sans Cyrl 700';
 	src: url('../fonts/MuseoSansCyrl-700.eot');
 	src: local('../fonts/MuseoSansCyrl-700'),
@@ -55,6 +60,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'Museo Sans Cyrl 700';
 	src: url('../fonts/MuseoSansCyrl-700Italic.eot');
 	src: local('../fonts/MuseoSansCyrl-700Italic'),
@@ -66,6 +72,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'Museo Sans Cyrl 300';
 	src: url('../fonts/MuseoSansCyrl-300.eot');
 	src: local('../fonts/MuseoSansCyrl-300'),
@@ -77,6 +84,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'Museo Sans Cyrl 100';
 	src: url('../fonts/MuseoSansCyrl-100.eot');
 	src: local('../fonts/MuseoSansCyrl-100'),
@@ -88,6 +96,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'Museo Sans Cyrl 100';
 	src: url('../fonts/MuseoSansCyrl-100Italic.eot');
 	src: local('MuseoSansCyrl-100Italic'),
@@ -99,6 +108,7 @@
 }
 
 @font-face {
+	font-display: swap;
 	font-family: 'Museo Sans Cyrl 900';
 	src: url('../fonts/MuseoSansCyrl-900Italic.eot');
 	src: local('../fonts/Museo Sans Cyrl 900 Italic'), local('MuseoSansCyrl-900Italic'),
