--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -11,7 +11,7 @@
     &__wrapper {
         display: flex;
         justify-content: space-between;
-        align-items:center;
+        align-items:top;
         margin-top: 60px;
     }
     &__item {
