--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -129,12 +129,14 @@
             padding-right: 20px;
             &_active {
                 transform: translateX(-100%);
+                // padding-right: 20px;
             }
             ul {
                 list-style-type: none;
                 margin-bottom: 0px;
                 margin-left: 0px;
                 padding-left: 0px;
+                padding-right: 20px;
             }
             li {
                 position: relative;
