logo changed, fixed #13

--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -52,6 +52,7 @@
         max-width: 300px;
         min-height: 440px;
         border: 2px solid #E8E8E8;
+        border-radius: 5px;
         padding: 20px;
         margin: 0 16px 16px 0;
         overflow: hidden;
