--- a/src/sass/blocks/_forms.scss
+++ b/src/sass/blocks/_forms.scss
@@ -1,6 +1,6 @@
 .feed-form {
     display: block;
-    width: 303px;
+    max-width: 303px;
     &__input {
         width: 100%;
         height: 54px;
