--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -10,7 +10,9 @@
     }
     &__wrapper {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        gap:20px;
         align-items:top;
         margin-top: 60px;
     }
