--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -1,6 +1,7 @@
 .button {
-    width: 153px;
-    height: 32px;
+    // max-width: 153px;
+    // height: 32px;
+    padding: 10px 35px;
     background: $main_color;
     font-weight: 500;
     font-size: 12px;
@@ -14,20 +15,18 @@
         background: black;
     }
     &__main {
-        // padding: 11px 41px;
-        width: 300px;
-        height: 50px;
+        padding: 10px 40px;
         margin-top: 67px;
         font-size: 16px;
     }
     &__submit {
         width: 100%;
-        height: 58px;
+        padding: 10px 10px;
         font-size: 16px;
     }
     &__catalog {
-        width: 135px;
-        height: 44px;
+        // width: 135px;
+        padding: 10px 40px;
         font-size: 14px;
     }
 }
