--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -1,13 +1,14 @@
 .carousel {
     padding: 81px 0;
     &__inner {
-        width: 950px;
+        max-width: 950px;
         margin: 0 auto;
         display: flex;
         justify-content: space-between;
         align-items: center;
         img {
-            margin: 0 auto;
+            height: 100%;
+            width:100%;
         }
     }
     .slick-prev {
