--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -8,7 +8,10 @@
         color: #0D0D0D;
     }
     &__tabs {
+        padding: 0;
         margin-top: 46px;
+        margin-left: 20px;
+        margin-right: 20px;
         list-style-type: none;
         display: flex;
         justify-content: center;
@@ -16,7 +19,7 @@
     }
     &__tab {
         width: 200px;
-        height: 50px;
+        min-height: 50px;
         border: 2px solid #0D0D0D;
         background: white;
         margin: 0 5px;
@@ -44,6 +47,8 @@
         margin-top: 57px;
         display: none;
         flex-wrap: wrap;
+        gap: 15px;
+        justify-content: center;
         &_active {
             display: flex;
         }
@@ -54,7 +59,7 @@
         border: 2px solid #E8E8E8;
         border-radius: 5px;
         padding: 20px;
-        margin: 0 16px 16px 0;
+        // margin: 0 16px 16px 0;
         overflow: hidden;
         &__img {
             display: block;
