--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -8,13 +8,14 @@
     &__info {
         position: absolute;
         top: 0;
-        left: calc(50% - 230px);
-        height: 270px;
-        width: 460px;
+        left: 50%;
+        transform: translateX(-50%);
+        min-height: 270px;
+        max-width: 500px;
         background: $main-color;
-        margin: 0 auto;
-        padding-top: 50px;
+        padding: 50px 50px 20px 50px;
         address {
+            margin: 0;
             text-align: center;
             font-size: 20px;
             font-weight: 500;
@@ -37,15 +38,13 @@
     }
     &__social {
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
+        align-items: center;
+        gap:10px;
         margin-top: 36px;
         &-item {
             &:hover {
                 text-decoration: none;
-            }
-            margin-left: 27px;
-            &:nth-child(1) {
-                margin-left: 0;
             }
         }
     }
