--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -2,10 +2,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 20px;
     &__logo {
         width: 205px;
         img {
             width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
     &__official{
