--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,7 +7,6 @@
 
 @import 'base/variables';
 @import 'base/mixins';
-@import 'base/media';
 @import 'base/animations';
 
 * {
@@ -33,3 +32,5 @@ html {
 @import 'blocks/footer';
 @import 'blocks/modal';
 @import 'blocks/pageup';
+//media
+@import 'base/media';
